--- a/sportArena/pubspec.yaml
+++ b/sportArena/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^1.6.0
   shared_preferences: ^2.5.4
   google_fonts: ^7.0.2
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
