--- a/sportArena/pubspec.yaml
+++ b/sportArena/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   shared_preferences: ^2.5.4
   google_fonts: ^7.0.2
   image_picker: ^1.2.1
+  permission_handler: ^12.0.1
+  path: ^1.9.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
